tests/ui/needless_borrow.stderr
error: this expression borrows a reference that is immediately dereferenced by the compiler
  --> $DIR/needless_borrow.rs:13:15
   |
13 |     let c = x(&&a);
   |               ^^^
   |
   = note: #[deny(needless_borrow)] implied by #[deny(clippy)]
note: lint level defined here
  --> $DIR/needless_borrow.rs:8:8
   |
8  | #[deny(clippy)]
   |        ^^^^^^

error: this pattern creates a reference to a reference
  --> $DIR/needless_borrow.rs:20:17
   |
20 |     if let Some(ref cake) = Some(&5) {}
   |                 ^^^^^^^^
   |
   = note: #[deny(needless_borrow)] implied by #[deny(clippy)]

error: this expression borrows a reference that is immediately dereferenced by the compiler
  --> $DIR/needless_borrow.rs:27:15
   |
27 |         46 => &&a,
   |               ^^^
   |
   = note: #[deny(needless_borrow)] implied by #[deny(clippy)]

warning: this pattern creates a reference to a reference
  --> $DIR/needless_borrow.rs:50:31
   |
50 |     let _ = v.iter().filter(|&ref a| a.is_empty());
   |                               ^^^^^
   |
   = note: #[warn(needless_borrow)] on by default

error: aborting due to 3 previous errors

